# EventServer

./: .gitignore  .gitmodules  LICENSE  SGF.sln  player_info.txt  readme.txt
ChatServer/: CMakeLists.txt  Chat.cpp  Chat.h  ChatServer.vcxproj  ChatServer.vcxproj.filters  Main.cpp
ChatServer/MsgHandle/: ChatPlayer.cpp  ChatPlayer.h  HandleChat.cpp  ModuleChat.cpp
ChatServer/NodeNet/: ChatNodeClient.cpp  ChatNodeClient.h  ChatNodeServer.cpp  ChatNodeServer.h  ChatServerThread.cpp  ChatServerThread.h
Common/: AnyData.hpp  Assertx.cpp  Assertx.h  CMakeLists.txt  CommDef.h  Common.vcxproj  Common.vcxproj.filters  ConcurrentQueue.hpp  ConsistentHash.hpp  FileHelper.cpp  FileHelper.h  FileUtil.cpp  FileUtil.h  JsonConfig.cpp  JsonConfig.h  Lock.hpp  LogHelper.cpp  LogHelper.h  LogUtil.cpp  LogUtil.h  MapEx.hpp  MemPool.hpp  NonCopyable.hpp  ObjPool.hpp  Random.hpp  SePlatForm.cpp  SePlatForm.h  SingleTon.hpp  SnowFlake.cpp  SnowFlake.h  SnowFlake.hpp  SqlUtil.cpp  SqlUtil.h  StringUtil.cpp  StringUtil.h  SyncQueue.hpp  TableDB.cpp  TableDB.h  ThreadBase.cpp  ThreadBase.h  (+9 more)
Common/3d/: V3Map.cpp  V3Map.h
Common/cityhash/: city.cc
Common/clienthandle/: HandleChat.h  HandleGame.h  HandleLogin.h  HandleWorld.h
Common/clientmodule/: ModuleChat.h  ModuleGame.h  ModuleGate.h  ModuleLogin.h  ModuleWorld.h
Common/clientproto/: Chat.pb.cc  Chat.pb.h  ClientPublic.pb.cc  ClientPublic.pb.h  Login.pb.cc  Login.pb.h  Login.proto
Common/datatable/: Scene.hpp
Common/designtable/: Activity.hpp  TableMgr.cpp  TableMgr.h
Common/expr/: SimpleExpr.cpp  SimpleExpr.h
Common/google/protobuf/: any_test.pb.cc  any_test.pb.h  map_lite_unittest.pb.cc  map_lite_unittest.pb.h  map_unittest.pb.cc  map_unittest.pb.h  unittest.pb.cc  unittest.pb.h  unittest_arena.pb.cc  unittest_arena.pb.h  unittest_custom_options.pb.cc  unittest_custom_options.pb.h  unittest_drop_unknown_fields.pb.cc  unittest_drop_unknown_fields.pb.h  unittest_embed_optimize_for.pb.h  unittest_empty.pb.h  unittest_import.pb.cc  unittest_import_lite.pb.h  unittest_import_public.pb.cc  unittest_import_public.pb.h  unittest_lazy_dependencies.pb.cc  unittest_lazy_dependencies.pb.h  unittest_lazy_dependencies_custom_option.pb.cc  unittest_lazy_dependencies_custom_option.pb.h  unittest_lazy_dependencies_enum.pb.cc  unittest_lazy_dependencies_enum.pb.h  unittest_lite.pb.h  unittest_lite_imports_nonlite.pb.cc  unittest_mset.pb.h  unittest_mset_wire_format.pb.cc  unittest_no_arena_import.pb.cc  unittest_no_arena_import.pb.h  unittest_no_arena_lite.pb.cc  unittest_no_field_presence.pb.cc  unittest_no_field_presence.pb.h  unittest_no_generic_services.pb.cc  unittest_no_generic_services.pb.h  unittest_optimize_for.pb.cc  (+11 more)
Common/packet/: Packet.h  PacketMgr.cpp  PacketMgr.h  Player.cpp  Player.h
Common/redis/: db_hiredis.cpp  db_hiredis.h  db_redis.cpp  db_redis.h
Common/stat/: Stat.cpp  Stat.h
Common/tablecpp/: Activity.hpp  Scene.hpp  TableMgr.cpp  TableMgr.h
Common/tbpb/: PbJsonConvert.cpp  PbJsonConvert.h  TableDB.cpp  TableDB.h
Common/timer/: Timer.cpp  Timer.h  TimerLoop.cpp  TimerLoop.h  TimerQueue.cpp  TimerQueue.h  Timestamp.cpp
Config/: log.cfg  (+3 more)
GameServer/: CMakeLists.txt  Game.cpp  Game.h  GameDef.cpp  GameDef.h  GameServer.vcxproj  GameServer.vcxproj.filters  Main.cpp
GameServer/GamePlayer/: GamePlayer.cpp  GamePlayer.h  GamePlayerMgr.cpp  GamePlayerMgr.h
GameServer/NodeNet/: GameNodeClient.cpp  GameNodeClient.h  GameServerThread.cpp  GameServerThread.h
GameServer/achieve/: readme.txt
GameServer/activity/: readme.txt
GameServer/ai/: Context.cpp  Context.h  STATE.CPP  State.h  StateMgr.cpp  StateMgr.h
GameServer/bag/: BagBase.cpp  BagBase.h  ItemBase.cpp  ItemBase.h  readme.txt
GameServer/common/: Common.cpp  Common.h  GameDef.h
GameServer/email/: Email.cpp  Email.h  EmailMgr.cpp  EmailMgr.h  readme.txt
GameServer/equipment/: readme.txt
GameServer/guild/: readme.txt
GameServer/luascript/: readme.txt
GameServer/match/: readme.txt
GameServer/module/: ModuleBase.cpp  ModuleBase.h  ModuleBuff.cpp  ModuleBuff.h  ModuleMgr.cpp  ModuleMgr.h  ModulePet.cpp  ModulePet.h  ModuleRank.cpp  ModuleRank.h  readme.txt
GameServer/money/: readme.txt
GameServer/msghandle/: readme.txt
GameServer/nav/: readme.txt
GameServer/scene/: MapNav.cpp  MapNav.h  Scene.cpp  Scene.h  SceneImpl.cpp  SceneImpl.h  SceneMgr.cpp  SceneMgr.h  Zone.cpp  Zone.h  ZoneMgr.cpp
GameServer/task/: Task.h  TaskMgr.cpp  TaskMgr.h  TaskTrigger.cpp  TaskTrigger.h
GameServer/tasks/: readme.txt
GateServer/: CMakeLists.txt  Gate.cpp  Gate.h  GateServer.vcxproj  GateServer.vcxproj.filters  Main.cpp
GateServer/ClientPlayer/: ClientPlayer.cpp  ClientPlayer.h  ClientPlayerMgr.cpp  ClientPlayerMgr.h
GateServer/NodeNet/: GateNodeClient.cpp  GateNodeClient.h  GateNodeServer.cpp  GateNodeServer.h  GatePlayerServer.cpp  GatePlayerServer.h  GateServerThread.cpp  GateServerThread.h
MasterServer/: CMakeLists.txt  Main.cpp  Master.cpp  Master.h  MasterServer.vcxproj  MasterServer.vcxproj.filters
MasterServer/NodeNet/: MasterNodeServer.cpp  MasterNodeServer.h  MasterServerThread.cpp  MasterServerThread.h
SeNet/: CMakeLists.txt  SeEpoll.cpp  SeEpoll.h  SeFClientBase.cpp  SeFClientBase.h  SeFINet.cpp  SeFINet.h  SeFNet.cpp  SeFNet.h  SeFNetClient.cpp  SeFNetClient.h  SeFNodeNet.pb.cc  SeFNodeNet.pb.h  SeFNodeNet.proto  SeFServerBase.cpp  SeFServerBase.h  SeIOCP.cpp.pb.cc  SeIOCP.cpp.pb.h  SeKqueue.cpp.pb.cc  SeKqueue.cpp.pb.h  SeKqueue.h  SeNet.cpp  SeNet.h  SeNet.vcxproj  SeNet.vcxproj.filters  SeSelect.cpp  SeSelect.h  ServerPublic.pb.cc  ServerPublic.pb.h  Session.cpp  Session.h  Socket.cpp  Socket.h  SocketBuffer.cpp  SocketBuffer.h  SocketDefine.cpp  SocketDefine.h
SeNet/http/: http_client.h  http_server.cpp  http_server.h
(+402 files in other folders)
