cmake_minimum_required(VERSION 2.8)
project(ChatServer)
add_definitions(-D__LINUX__)
include_directories(../Common ../SeNet ../ ./ /usr/include /usr/local/include /usr/include/mysql)
link_directories(../libs)
set(SOURCE_FILE Chat.cpp NodeNet/ChatNodeServer.cpp Main.cpp MsgHandle/ChatPlayer.cpp MsgHandle/ModuleChat.cpp NodeNet/ChatNodeClient.cpp NodeNet/ChatServerThread.cpp)

set(CMAKE_VERBOSE_MAKEFILE on)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -o2")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
set(CMAKE_C_COMPILER "gcc")
set(CMAKE_CXX_COMPILER "g++")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
        
add_executable(ChatServer ${SOURCE_FILE})
target_link_libraries(ChatServer  libSeNet.a libCommon.a libconfig++.a libprotobufd.a libprotobuf-lited.a libprotocd.a mysqlclient dl stdc++fs pthread)