cmake_minimum_required(VERSION 2.8)
project(GateServer)
add_definitions(-D__LINUX__)
include_directories(../Common ../SeNet ../ ./ /usr/include /usr/local/include /usr/include/mysql)
link_directories(../libs)
set(SOURCE_FILE ClientPlayer/ClientPlayer.cpp ClientPlayer/ClientPlayerMgr.cpp Gate.cpp Main.cpp NodeNet/GateNodeClient.cpp NodeNet/GateNodeServer.cpp NodeNet/GatePlayerServer.cpp NodeNet/GateServerThread.cpp)

set(CMAKE_VERBOSE_MAKEFILE on)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -o2")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
set(CMAKE_C_COMPILER "gcc")
set(CMAKE_CXX_COMPILER "g++")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
        
add_executable(GateServer ${SOURCE_FILE})
target_link_libraries(GateServer  libSeNet.a libCommon.a libconfig++.a libprotobufd.a libprotobuf-lited.a libprotocd.a mysqlclient dl stdc++fs pthread)