cmake_minimum_required(VERSION 2.8)
project(MasterServer)
add_definitions(-D__LINUX__)
include_directories(../Common ../SeNet ../ ./ /usr/include /usr/local/include /usr/include/mysql)
link_directories(../lib)
set(SOURCE_FILE Game.cpp Main.cpp NodeNet/GameNodeClient.cpp NodeNet/GameServerThread.cpp)

set(CMAKE_VERBOSE_MAKEFILE on)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -o2")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
set(CMAKE_C_COMPILER "gcc")
set(CMAKE_CXX_COMPILER "g++")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
        
add_executable(MasterServer ${SOURCE_FILE})
target_link_libraries(MasterServer  libSeNet.a libCommon.a libprotobufd.a libprotobuf-lited.a libprotocd.a libconfig++.a mysqlclient dl stdc++fs pthread)